package app;
//option java_package="app";
option java_package="com.messenger.javaserver.usersetting.proto";
//option optimize_for = LITE_RUNTIME;
import "app/mobrequestbase.proto";

enum USER_SETTING_TYPE_ENUM{
    USER_NAME = 1;
    AVATAR = 2;
    WHATS_UP = 3;//签名
    SESSION_MUTE = 4;//标识群或者用户是否mute
    WEB_NOTIFICATION = 5;//web端是否通知
    WEB_PREVIEW = 6;//web端的preview
    WEB_SOUND = 7;//Web端的sound
    HAVE_READ_PRIVACY = 8;//是否已读标志
}

message SessionMuted{
    required int32 session_type = 1;//1:user 2:group
    required uint64 session_id = 2;//userid or groupId
    required bool mute_flag = 3;//是否mute
}

message UserSettings{
    optional string user_name = 1;
    optional string avatar = 2;
    optional int32 whatsUpType = 3;//0代表系统签名，1代表自定义签名
    optional string customWhatsUpContent = 4;//签名类型参照whatsUpType，自定义签名。
    optional int32 sysWhatsUpNum = 5;//签名类型参照whatsUpType，自定义签名。
    repeated SessionMuted session_muted = 6;
    optional bool web_notification = 7;
    optional bool web_preview = 8;
    optional bool web_sound = 9;
    optional bool have_read_privacy = 10;
    optional string language = 11;
}

message UserSettingsNtf{
    required int32 type = 1;//setting 类型
    required UserSettings user_setting = 2;
}
